Background disabled until finding a way to fix dark mode bug with it. Dark mode Inclused, starting to work with forms and java.

--- a/css/style.css
+++ b/css/style.css
@@ -50,8 +50,8 @@ a:visited {
 .hero {
     text-align: center;
     font-size: 1.2rem;
-    background-image: url(../assets/images/background.jpg);
-    background-size: 1000px;
+    /* background-image: url(../assets/images/background.jpg); 
+    background-size: 1000px;  <!-- Unabled until solved background problem..--> */
     padding: 16px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);}
 
@@ -62,15 +62,15 @@ a:visited {
 }
 
 
-/* Cards layout configuration */
+Cards layout configuration
 
 .cards {
     display: grid;
     gap: 10px;
     grid-template-columns: repeat(auto-fit,minmax(200px, 1fr));
-     background-image: url(../assets/images/background.jpg);
+     /* background-image: url(../assets/images/background.jpg);
     background-size: cover;
-    background-position: center;
+    background-position: center; */
     padding: 16px;
 }
 
@@ -112,9 +112,9 @@ a:visited {
     transform: translateY(-5px);
 }
 
-.about-us {
+/* .about-us {
     background-image: url(../assets/images/background.jpg);
-}
+} */
 
 .about-us__text {
     text-align: justify;
@@ -148,3 +148,39 @@ a:visited {
     text-align: center;
     color: white;
 }
+/* New Implementations */
+
+@media (max-width: 600px) {
+    .navbar__links {
+        display: none;
+        flex-direction: column;
+    }
+
+    .navbar__links.active {
+        display: flex;
+    }
+}
+
+/* Modal */
+
+.modal {
+    display:none;
+    position: fixed;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.7);
+    color:white
+}
+
+.modal.active {
+    display: block;
+}
+
+.dark {
+    background: black;
+    color: white;
+}
+
+
